update project for versions, repos, testing